force-app/main/default/objects/Contact/fields/Acceptance_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Letter_Sent__c</fullName>
    <formula>Text(EnrollmentrxRx__Active_Enrollment_Opportunity__r.Acceptance_Letter_Sent__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acceptance Letter Sent</label>
    <type>Text</type>
</CustomField>