force-app/main/default/objects/Contact/fields/Active_App_Conditional_Admit__c.field-meta.xml
<CustomField>
    <fullName>Active_App_Conditional_Admit__c</fullName>
    <formula>EnrollmentrxRx__Active_Enrollment_Opportunity__r.Niche_Conditional_Admit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active App Conditional Admit</label>
    <type>Checkbox</type>
</CustomField>