force-app/main/default/objects/Contact/fields/Active_App_Date_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Active_App_Date_Confirmed__c</fullName>
    <formula>EnrollmentrxRx__Active_Enrollment_Opportunity__r.Date_Admission_Accepted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active App Date Confirmed</label>
    <type>Date</type>
</CustomField>