force-app/main/default/objects/Contact/fields/Active_App_Date_Started_App__c.field-meta.xml
<CustomField>
    <fullName>Active_App_Date_Started_App__c</fullName>
    <formula>EnrollmentrxRx__Active_Enrollment_Opportunity__r.Date_Started_App__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active App Date Started App</label>
    <type>Date</type>
</CustomField>