force-app/main/default/objects/Contact/fields/Active_App_No_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Active_App_No_Engagement__c</fullName>
    <formula>TEXT( EnrollmentrxRx__Active_Enrollment_Opportunity__r.No_Engagement__c )</formula>
    <label>Active App No Engagement</label>
    <type>Text</type>
</CustomField>