force-app/main/default/objects/Contact/fields/Active_App_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Active_App_Owner_Email__c</fullName>
    <formula>EnrollmentrxRx__Active_Enrollment_Opportunity__r.Owner_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active App Owner Email</label>
    <type>Text</type>
</CustomField>