force-app/main/default/objects/Contact/fields/Active_Application_Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Active_Application_Application_Type__c</fullName>
    <formula>TEXT(EnrollmentrxRx__Active_Enrollment_Opportunity__r.Application_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Application Application Type</label>
    <type>Text</type>
</CustomField>