force-app/main/default/objects/Contact/fields/Active_Application_Owner__c.field-meta.xml
<CustomField>
    <fullName>Active_Application_Owner__c</fullName>
    <formula>(EnrollmentrxRx__Active_Enrollment_Opportunity__r.Owner:User.FirstName + &quot; &quot; + EnrollmentrxRx__Active_Enrollment_Opportunity__r.Owner:User.LastName)</formula>
    <label>Active Application Owner</label>
    <type>Text</type>
</CustomField>