force-app/main/default/objects/Contact/fields/Active_Application_Owner_Google_Appt__c.field-meta.xml
<CustomField>
    <fullName>Active_Application_Owner_Google_Appt__c</fullName>
    <formula>EnrollmentrxRx__Active_Enrollment_Opportunity__r.Owner:User.Google_Appt_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Application Owner Google Appt</label>
    <type>Text</type>
</CustomField>