force-app/main/default/objects/Contact/fields/Active_Application_Owner_Phone__c.field-meta.xml
<CustomField>
    <fullName>Active_Application_Owner_Phone__c</fullName>
    <formula>EnrollmentrxRx__Active_Enrollment_Opportunity__r.Owner_Phone__c</formula>
    <label>Active Application Owner Phone</label>
    <type>Text</type>
</CustomField>