force-app/main/default/objects/Contact/fields/Active_Application_Semester__c.field-meta.xml
<CustomField>
    <fullName>Active_Application_Semester__c</fullName>
    <formula>EnrollmentrxRx__Active_Enrollment_Opportunity__r.Semester__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Application Semester</label>
    <type>Text</type>
</CustomField>