force-app/main/default/objects/Contact/fields/Active_Application_Student_Type__c.field-meta.xml
<CustomField>
    <fullName>Active_Application_Student_Type__c</fullName>
    <formula>text(EnrollmentrxRx__Active_Enrollment_Opportunity__r.Student_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Application Student Type</label>
    <type>Text</type>
</CustomField>