force-app/main/default/objects/Contact/fields/Allergies_description__c.field-meta.xml
<CustomField>
    <fullName>Allergies_description__c</fullName>
    <label>Allergies description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>