force-app/main/default/objects/Contact/fields/Applicant_Portal_Profile__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Portal_Profile__c</fullName>
    <label>User Profile</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Applicant Portal Profile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>