force-app/main/default/objects/Contact/fields/Application_Campus__c.field-meta.xml
<CustomField>
    <fullName>Application_Campus__c</fullName>
    <formula>EnrollmentrxRx__Active_Enrollment_Opportunity__r.CampusName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Campus</label>
    <type>Text</type>
</CustomField>