force-app/main/default/objects/Contact/fields/Application_Major__c.field-meta.xml
<CustomField>
    <fullName>Application_Major__c</fullName>
    <formula>EnrollmentrxRx__Active_Enrollment_Opportunity__r.Major__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Major</label>
    <type>Text</type>
</CustomField>