force-app/main/default/objects/Contact/fields/Application_Print_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Application_Print_Date_Time__c</fullName>
    <formula>EnrollmentrxRx__Active_Enrollment_Opportunity__r.Application_Print_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Print Date Time</label>
    <type>DateTime</type>
</CustomField>