force-app/main/default/objects/Contact/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <label>Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JD</fullName>
                <label>St. Francis</label>
            </value>
            <value>
                <fullName>UNDG</fullName>
                <label>Undergraduate</label>
            </value>
            <value>
                <fullName>GRAD</fullName>
                <label>Graduate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>