force-app/main/default/objects/Contact/fields/Camp_Topic__c.field-meta.xml
<CustomField>
    <fullName>Camp_Topic__c</fullName>
    <label>Camp Topic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Math</fullName>
            </value>
            <value>
                <fullName>Nursing</fullName>
            </value>
            <value>
                <fullName>Science</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Writing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>