force-app/main/default/objects/Contact/fields/Campus__c.field-meta.xml
<CustomField>
    <fullName>Campus__c</fullName>
    <label>Campus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Auburn Hills</fullName>
            </value>
            <value>
                <fullName>Auto/Diesel Institute of Michigan</fullName>
            </value>
            <value>
                <fullName>Cadillac</fullName>
            </value>
            <value>
                <fullName>Center for Grad Studies</fullName>
            </value>
            <value>
                <fullName>Jackson</fullName>
            </value>
            <value>
                <fullName>Muskegon</fullName>
            </value>
            <value>
                <fullName>Owosso</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>HS Dual Enrollment</fullName>
            </value>
            <value>
                <fullName>St. Francis</fullName>
            </value>
            <value>
                <fullName>Port Huron</fullName>
            </value>
            <value>
                <fullName>Center for Graduate Studies</fullName>
            </value>
            <value>
                <fullName>Culinary Institute of Michigan - Muskegon</fullName>
            </value>
            <value>
                <fullName>Culinary Institute of Michigan - Port Huron</fullName>
            </value>
            <value>
                <fullName>Royal Oak</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>