force-app/main/default/objects/Contact/fields/CampusLU__c.field-meta.xml
<CustomField>
    <fullName>CampusLU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CampusLU</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Campus</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts (CampusLU)</relationshipLabel>
    <relationshipName>Contacts2</relationshipName>
    <type>Lookup</type>
</CustomField>