force-app/main/default/objects/Contact/fields/Child_1_Active_App_Campus__c.field-meta.xml
<CustomField>
    <fullName>Child_1_Active_App_Campus__c</fullName>
    <label>Child 1 Active App Campus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>