force-app/main/default/objects/Contact/fields/Child_1_Contact_Record__c.field-meta.xml
<CustomField>
    <fullName>Child_1_Contact_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child 1 Contact Record</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Child 1 Contact Record)</relationshipLabel>
    <relationshipName>Child_1</relationshipName>
    <type>Lookup</type>
</CustomField>