force-app/main/default/objects/Contact/fields/Child_2_Active_App_Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>Child_2_Active_App_Registration_Status__c</fullName>
    <label>Child 2 Active App Registration Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>