force-app/main/default/objects/Contact/fields/Child_2_Active_App_Semester__c.field-meta.xml
<CustomField>
    <fullName>Child_2_Active_App_Semester__c</fullName>
    <label>Child 2 Active App Semester</label>
    <length>255</length>
    <type>Text</type>
</CustomField>