force-app/main/default/objects/Contact/fields/Child_2_Active_Application__c.field-meta.xml
<CustomField>
    <fullName>Child_2_Active_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child 2 Active Application</label>
    <referenceTo>EnrollmentrxRx__Enrollment_Opportunity__c</referenceTo>
    <relationshipLabel>Contacts (Child 2 Active Application)</relationshipLabel>
    <relationshipName>Contacts_Child_2_Active_App</relationshipName>
    <type>Lookup</type>
</CustomField>