force-app/main/default/objects/Contact/fields/Child_2_Contact_Record__c.field-meta.xml
<CustomField>
    <fullName>Child_2_Contact_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child 2 Contact Record</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Child 2 Contact Record)</relationshipLabel>
    <relationshipName>Child_2</relationshipName>
    <type>Lookup</type>
</CustomField>