force-app/main/default/objects/Contact/fields/Citizenship_Status__c.field-meta.xml
<CustomField>
    <fullName>Citizenship_Status__c</fullName>
    <label>Citizenship Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>U.S. Citizen</fullName>
            </value>
            <value>
                <fullName>Foreign Citizenship</fullName>
            </value>
            <value>
                <fullName>Dual Citizen</fullName>
            </value>
            <value>
                <fullName>U.S. Permanent Resident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>