force-app/main/default/objects/Contact/fields/Cleaned_Permanent_Address__c.field-meta.xml
<CustomField>
    <fullName>Cleaned_Permanent_Address__c</fullName>
    <description>Defines the current cleanliness of the permanent address from CX.</description>
    <inlineHelpText>Defines the current cleanliness of the permanent address from CX.</inlineHelpText>
    <label>Cleaned Permanent Address?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Needs Cleaning</fullName>
            </value>
            <value>
                <fullName>Cleaned with Error</fullName>
            </value>
            <value>
                <fullName>Cleaned</fullName>
            </value>
            <value>
                <fullName>Overridden</fullName>
            </value>
            <value>
                <fullName>International</fullName>
                <isActive>false</isActive>
                <label>International</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>