force-app/main/default/objects/Contact/fields/Communication_Type__c.field-meta.xml
<CustomField>
    <fullName>Communication_Type__c</fullName>
    <label>Communication Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Traditional Freshman</fullName>
                <label>First Year Student</label>
            </value>
            <value>
                <fullName>Adult Freshman</fullName>
                <label>Adult First Year Student</label>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Graduate</fullName>
            </value>
            <value>
                <fullName>St. Francis</fullName>
            </value>
            <value>
                <fullName>Running Start</fullName>
            </value>
            <value>
                <fullName>Guest</fullName>
            </value>
            <value>
                <fullName>School Counselor</fullName>
            </value>
            <value>
                <fullName>LEA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>