force-app/main/default/objects/Contact/fields/Competitive_Experience__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Experience__c</fullName>
    <label>Competitive Experience</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>