force-app/main/default/objects/Contact/fields/Concentration__c.field-meta.xml
<CustomField>
    <fullName>Concentration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Concentration</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Concentration</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts (Concentration)</relationshipLabel>
    <relationshipName>Contacts3</relationshipName>
    <type>Lookup</type>
</CustomField>