force-app/main/default/objects/Contact/fields/Consortium_Contact__c.field-meta.xml
<CustomField>
    <fullName>Consortium_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consortium Contact</label>
    <type>Checkbox</type>
</CustomField>