force-app/main/default/objects/Contact/fields/Conversion_URL__c.field-meta.xml
<CustomField>
    <fullName>Conversion_URL__c</fullName>
    <description>URL someone last submitted an RFI form on.</description>
    <label>Conversion URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>