force-app/main/default/objects/Contact/fields/Country_Of_Citizenship__c.field-meta.xml
<CustomField>
    <fullName>Country_Of_Citizenship__c</fullName>
    <label>Country Of Citizenship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Values</valueSetName>
    </valueSet>
</CustomField>