force-app/main/default/objects/Contact/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <formula>text (EnrollmentrxRx__Active_Enrollment_Opportunity__r.Date_Inquiry__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Inquiry</label>
    <type>Text</type>
</CustomField>