force-app/main/default/objects/Contact/fields/Date_Admitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Admitted__c</fullName>
    <formula>text  (EnrollmentrxRx__Active_Enrollment_Opportunity__r.Date_Admitted__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Admitted</label>
    <type>Text</type>
</CustomField>