force-app/main/default/objects/Contact/fields/Date_App_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_App_Submitted__c</fullName>
    <formula>EnrollmentrxRx__Active_Enrollment_Opportunity__r.Date_Submitted_App__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date App Submitted</label>
    <type>Date</type>
</CustomField>