force-app/main/default/objects/Contact/fields/Date_Registered__c.field-meta.xml
<CustomField>
    <fullName>Date_Registered__c</fullName>
    <formula>text( EnrollmentrxRx__Active_Enrollment_Opportunity__r.Date_Registered__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Registered</label>
    <type>Text</type>
</CustomField>