force-app/main/default/objects/Contact/fields/Date_Submitted_App__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted_App__c</fullName>
    <formula>text (EnrollmentrxRx__Active_Enrollment_Opportunity__r.Date_Submitted_App__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Submitted App</label>
    <type>Text</type>
</CustomField>