force-app/main/default/objects/Contact/fields/Degree_Type__c.field-meta.xml
<CustomField>
    <fullName>Degree_Type__c</fullName>
    <label>Degree Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Certificate</fullName>
            </value>
            <value>
                <fullName>Associate&apos;s Degree</fullName>
            </value>
            <value>
                <fullName>Bachelor&apos;s Degree</fullName>
            </value>
            <value>
                <fullName>Master&apos;s Certificate</fullName>
            </value>
            <value>
                <fullName>Master&apos;s Degree</fullName>
            </value>
            <value>
                <fullName>MBA</fullName>
            </value>
            <value>
                <fullName>Doctoral Degree</fullName>
            </value>
            <value>
                <fullName>Auto/Diesel Institute Programs</fullName>
            </value>
            <value>
                <fullName>Culinary Institute Programs</fullName>
            </value>
            <value>
                <fullName>Associate of Applied Science</fullName>
            </value>
            <value>
                <fullName>Bachelor of Business Administration</fullName>
            </value>
            <value>
                <fullName>Bachelor of General Studies</fullName>
            </value>
            <value>
                <fullName>Bachelor of Science</fullName>
            </value>
            <value>
                <fullName>Doctorate of Business Administration</fullName>
            </value>
            <value>
                <fullName>Graduate Certificate</fullName>
            </value>
            <value>
                <fullName>Juris Doctor</fullName>
            </value>
            <value>
                <fullName>Master of Business Administration</fullName>
            </value>
            <value>
                <fullName>Master of Science</fullName>
            </value>
            <value>
                <fullName>Master of Science Nursing</fullName>
            </value>
            <value>
                <fullName>Post-Baccalaureate Certificate</fullName>
            </value>
            <value>
                <fullName>Non Degree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>