force-app/main/default/objects/Contact/fields/Dietary_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Restrictions__c</fullName>
    <label>Dietary Restrictions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>