force-app/main/default/objects/Contact/fields/Dietary_Restrictions_Descriptions__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Restrictions_Descriptions__c</fullName>
    <label>Dietary Restrictions Descriptions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>