force-app/main/default/objects/Contact/fields/Direct_Admit_Student_Eligible_PPA__c.field-meta.xml
<CustomField>
    <fullName>Direct_Admit_Student_Eligible_PPA__c</fullName>
    <formula>EnrollmentrxRx__Active_Enrollment_Opportunity__r.Direct_Admit_Student_Eligible__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct Admit Student Eligible (PPA)</label>
    <type>Checkbox</type>
</CustomField>