force-app/main/default/objects/Contact/fields/Discord__c.field-meta.xml
<CustomField>
    <fullName>Discord__c</fullName>
    <label>Discord</label>
    <length>255</length>
    <type>Text</type>
</CustomField>