force-app/main/default/objects/Contact/fields/Do_Not_Sync_to_CX__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Sync_to_CX__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked to instruct Jitterbit to ignore syncing this Contact regardless of other criteria.</description>
    <label>Do Not Sync to J1</label>
    <type>Checkbox</type>
</CustomField>