force-app/main/default/objects/Contact/fields/eddyid__c.field-meta.xml
<CustomField>
    <fullName>eddyid__c</fullName>
    <label>eddyid</label>
    <length>100</length>
    <type>Text</type>
</CustomField>