force-app/main/default/objects/Contact/fields/Emergency_Contact_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Full_Name__c</fullName>
    <label>Emergency Contact  Full Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>