force-app/main/default/objects/Contact/fields/Emergency_Contact_Relationshiip__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Relationshiip__c</fullName>
    <label>Emergency Contact Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Guardian</fullName>
            </value>
            <value>
                <fullName>Mother</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>