force-app/main/default/objects/Contact/fields/EnrollmentrxRx__Active_Enrollment_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentrxRx__Active_Enrollment_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active Application Record</label>
    <referenceTo>EnrollmentrxRx__Enrollment_Opportunity__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>