force-app/main/default/objects/Contact/fields/EnrollmentrxRx__Admissions_Status__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentrxRx__Admissions_Status__c</fullName>
    <formula>TEXT(EnrollmentrxRx__Active_Enrollment_Opportunity__r.EnrollmentrxRx__Admissions_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Admissions Status</label>
    <type>Text</type>
</CustomField>