force-app/main/default/objects/Contact/fields/EnrollmentrxRx__Create_Touch_Point__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentrxRx__Create_Touch_Point__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Touch Point</label>
    <type>Checkbox</type>
</CustomField>