force-app/main/default/objects/Contact/fields/EnrollmentrxRx__Has_EO_Check__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentrxRx__Has_EO_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hidden field used to determine if a new record has been checked for Enrollment Opportunity creation. Used in a workflow rule, which forces the ContactBeforeUpdate trigger to fire.</description>
    <inlineHelpText>Hidden field used to determine if a new record has been checked for Enrollment Opportunity creation. Used in a workflow rule, which forces the ContactBeforeUpdate trigger to fire.</inlineHelpText>
    <label>Has EO Check(deprecated)</label>
    <type>Checkbox</type>
</CustomField>