force-app/main/default/objects/Contact/fields/EnrollmentrxRx__High_School__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentrxRx__High_School__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>High School Name</label>
    <referenceTo>EnrollmentrxRx__High_School__c</referenceTo>
    <relationshipLabel>High School Students</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>