force-app/main/default/objects/Contact/fields/EnrollmentrxRx__High_School_Code__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentrxRx__High_School_Code__c</fullName>
    <externalId>true</externalId>
    <label>High School Code(deprecated)</label>
    <length>9</length>
    <type>Text</type>
</CustomField>