force-app/main/default/objects/Contact/fields/EnrollmentrxRx__High_School_Employer__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentrxRx__High_School_Employer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>High School Employer</label>
    <referenceTo>EnrollmentrxRx__High_School__c</referenceTo>
    <relationshipLabel>High School Employees</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>