force-app/main/default/objects/Contact/fields/EnrollmentrxRx__Secondary_Email__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentrxRx__Secondary_Email__c</fullName>
    <description>ERx Field</description>
    <label>Secondary Email</label>
    <type>Email</type>
</CustomField>