force-app/main/default/objects/Contact/fields/EnrollmentrxRx__SIS_ID__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentrxRx__SIS_ID__c</fullName>
    <description>ERx Field</description>
    <label>SIS ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>